# rust-rule-engine

./: Cargo.toml  README.md  RETE_ARCHITECTURE.md
docs/: README.md
docs/advanced-features/: README.md  REDIS_STATE_BACKEND.md  STREAMING.md  STREAMING_ARCHITECTURE.md
docs/api-reference/: PARSER_CHEAT_SHEET.md
docs/core-features/: GRL_SYNTAX.md
docs/getting-started/: INSTALLATION.md  QUICK_START.md
docs/guides/: MODULE_PARSING_GUIDE.md
examples/: README.md
src/: lib.rs  types.rs
src/backward/: search.rs
src/engine/: analytics.rs  condition_evaluator.rs  coverage.rs  dependency.rs  engine.rs  knowledge_base.rs  parallel.rs  rule.rs  safe_parallel.rs  template.rs  workflow.rs
src/parser/: grl.rs  grl_no_regex.rs  mod.rs
src/parser/grl/: stream_syntax.rs
src/rete/: agenda.rs  grl_loader.rs  mod.rs  network.rs  propagation.rs  tms.rs  working_memory.rs
src/streaming/: engine.rs  mod.rs  processor.rs  state.rs  watermark.rs  window.rs
tests/: function_errors.rs  function_meta.rs  grl_no_regex_thread_safety.rs  numeric_equality.rs  proof_graph_integration_test.rs  stream_processor.rs
